# build-test-pipeline-sim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
sample/: pipeline.yml
sim/: cli.py  runner.py
tests/: test_sim.py
